--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-02-16  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
+
+	* elf/dlfcn.h: Fix typo.
+	* sysdeps/generic/bits/dlfcn.h: Likewise.
+	* sysdeps/mips/bits/dlfcn.h: Likewise.
+
 1999-02-16  Ulrich Drepper  <drepper@cygnus.com>
 
 	* sysdeps/i386/i486/bits/string.h (memcmp): Correctly set flags
