--- a/db2/README
+++ b/db2/README
@@ -9,5 +9,5 @@ Sleepycat Software, Inc.
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 The LICENSE file, mentioned in the beginning of the source files, can
-be found together with all the other relevant license texts in the
-manual and the INSTALL file in the toplevel directory.
+be found in this directory and also with all the other relevant
+license texts in the manual.
