--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-02-16  Roland McGrath  <roland@baalperazim.frob.com>
+
+	* sysdeps/mach/hurd/revoke.c: New file.
+
 1999-02-16  Ulrich Drepper  <drepper@cygnus.com>
 
 	* wctype/wctype.h (_ISwbit): Cast result of shift operations to
