--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+1999-02-18  Ulrich Drepper  <drepper@cygnus.com>
+
+	* io/Makefile (routines): Add lock64.
+	* io/Versions: Add lockf64 for GLIBC_2.1.1.
+	* sysdeps/generic/lockf64.c: New file.
+
 1999-02-16  Ulrich Drepper  <drepper@cygnus.com>
 
 	* string/bits/string2.h: Only use strncmp optimization if count
