--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-02-18  Thorsten Kukuk  <kukuk@suse.de>
+
+	* nis/nss_compat/compat-spwd.c: Fix handling of default values for
+	sp_warn, sp_inact, sp_expire and sp_flag.
+
 1999-02-18  Ulrich Drepper  <drepper@cygnus.com>
 
 	* elf/link.h (link_map): Add l_dev and l_ino.
