--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-02-19  Philip Blundell  <pb@nexus.co.uk>
+
+	* Makeconfig (link-libc): When doing a static link, make sure that
+	libgcc.a is included both before and after libc.a.
+
 1999-02-18  Thorsten Kukuk  <kukuk@suse.de>
 
 	* nis/nss_compat/compat-spwd.c: Fix handling of default values for
