--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 1999-02-20  Ulrich Drepper  <drepper@cygnus.com>
 
+	* elf/dl-lookup.c (_dl_lookup_symbol_skip): Before first do_lookup
+	call test whether there is any scope left.
+	(_dl_lookup_versioned_symbol_skip): Likewise.
+
 	* elf/Makefile (distribute): Add do-lookup.h.
 	* elf/do-lookup.h: New file.  Split out from dl-lookup.c.
 	* elf/dl-lookup.c: Move do_lookup function in separate file and
