--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-02-21  Ulrich Drepper  <drepper@cygnus.com>
+
+	* sysdeps/generic/glob.c (glob): Enlarge buffers for reentrant
+	lookup functions if it is too small.
+
 1999-02-20  Ulrich Drepper  <drepper@cygnus.com>
 
 	* elf/dl-deps.c (_dl_map_object_deps): Don't add dummy objects created
