--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-05  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
+
+	* resolv/inet_addr.c (inet_aton): Don't allow componets >
+	255. Patch by Bruno Haible <haible@ilog.fr> [PR libc/1010].
+
 1999-03-05  Geoff Keating  <geoffk@ozemail.com.au>
 
 	* sysdeps/powerpc/dl-machine.c (__elf_machine_runtime_setup):
