--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-05  Ulrich Drepper  <drepper@cygnus.com>
+
+	* posix/globtest.sh: Make common_objpfx path absolute and and db2
+	and hesiod directory to library path [PR libc/1007].
+
 1999-03-05  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
 
 	* resolv/inet_addr.c (inet_aton): Don't allow componets >
