--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 1999-03-05  Ulrich Drepper  <drepper@cygnus.com>
 
+	* sysdeps/unix/sysv/linux/ttyname_r.c (__ttyname_r): Remember
+	whether /dev/pts is available.
+	* sysdeps/unix/sysv/linux/ttyname.c (ttyname): Fix handling of
+	dev_pts_available.
+
 	* posix/globtest.sh: Make common_objpfx path absolute and and db2
 	and hesiod directory to library path [PR libc/1007].
 
